--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore api
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build api --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test api --no-build --verbosity normal
