--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore api
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build api --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test api --no-build --verbosity normal
